// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GoYoshi > buildReleasePullRequest > combines google-api-go-client autogenerated PR 1`] = `
":sparkles: Increase prepared a new release
---


## 0.0.1 (1983-10-10)


### Features

* **all:** auto-regenerate discovery clients, refs [#1281](https://github.com/googleapis/google-api-go-client/issues/1281) [#1280](https://github.com/googleapis/google-api-go-client/issues/1280) [#1279](https://github.com/googleapis/google-api-go-client/issues/1279) [#1278](https://github.com/googleapis/google-api-go-client/issues/1278)

---
This pull request is managed by Increase's [release-please](https://github.com/Increase/release-please) fork.

The [semver version number](https://semver.org/#semantic-versioning-specification-semver) is based on included [commit messages](https://www.conventionalcommits.org/en/v1.0.0/). Alternatively, you can manually set the version number in the title of this pull request.

For a better experience, it is recommended to use either rebase-merge or squash-merge when merging this pull request."
`;

exports[`GoYoshi > buildReleasePullRequest > filters out submodule commits 1`] = `
":sparkles: Increase prepared a new release
---


## 0.0.1 (1983-10-10)


### Bug Fixes

* **translate:** some translate fix ([a74c6a3](https://github.com/googleapis/google-cloud-go/commit/a74c6a3c43273a62de7e47bef2e11fb0))

---
This pull request is managed by Increase's [release-please](https://github.com/Increase/release-please) fork.

The [semver version number](https://semver.org/#semantic-versioning-specification-semver) is based on included [commit messages](https://www.conventionalcommits.org/en/v1.0.0/). Alternatively, you can manually set the version number in the title of this pull request.

For a better experience, it is recommended to use either rebase-merge or squash-merge when merging this pull request."
`;

exports[`GoYoshi > buildReleasePullRequest > filters out touched files not matching submodule commits 1`] = `
":sparkles: Increase prepared a new release
---


## 0.0.1 (1983-10-10)


### Bug Fixes

* **iam/apiv1:** some firestore fix ([6daedf3](https://github.com/googleapis/google-cloud-go/commit/6daedf3971d9e1b4c99ff1b3a52c94a5))

---
This pull request is managed by Increase's [release-please](https://github.com/Increase/release-please) fork.

The [semver version number](https://semver.org/#semantic-versioning-specification-semver) is based on included [commit messages](https://www.conventionalcommits.org/en/v1.0.0/). Alternatively, you can manually set the version number in the title of this pull request.

For a better experience, it is recommended to use either rebase-merge or squash-merge when merging this pull request."
`;
